# neop

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/neop/: main.py
tests/: allele_ref.csv  annotate_maf_test.py  predict_test.py  predict_test_no_alleles.py  test_maf.maf
tests/output_files/: annotate_maf_test.maf  predict_test_no_alleles_output.csv  predict_test_no_alleles_output.json  predict_test_output.csv  predict_test_output.json
